[metadata]
name = gravity_pyforms
version = attr: gravity_pyforms.__version__
author = Ezequiel David
author_email = ezeq.david98@gmail.com
url =
description = Python library to interact with Gravity Forms APIv2
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = gravity forms, api, python, forms, api v2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
install_requires =
    requests >= 2.25.1